import { by, device, expect, element, waitFor } from 'detox';

describe('Example', () => {
  beforeAll(async () => {
    await device.launchApp();
  });

  beforeEach(async () => {
    await device.reloadReactNative();
  });

  afterEach(async () => {
    await element(by.id('flush')).tap();
    await waitFor(element(by.id('status')))
      .toHaveText('Flushed')
      .withTimeout(3000);
  });

  it('should have Send a trace button', async () => {
    await expect(element(by.id('send_trace'))).toBeVisible();
  });

  it('should send a trace', async () => {
    await element(by.id('send_trace')).tap();
  });

  describe('network tests', () => {
    it('should send a network request', async () => {
      await element(by.id('send_network_request')).tap();
      await waitFor(element(by.id('status')))
        .toHaveText('fetch complete')
        .withTimeout(3000);
    });
  });

  describe('errors tests', () => {
    beforeEach(async () => {
      await waitFor(element(by.id('goto_errors')))
        .toBeVisible()
        .withTimeout(3000);
      await element(by.id('goto_errors')).tap();
    });

    afterEach(async () => {
      await element(by.id('goto_main')).tap();
    });

    it('should throw an error', async () => {
      await element(by.id('throw_error')).tap();
    });

    it('should throw a String', async () => {
      await element(by.id('throw_string')).tap();
    });

    it('should stall the event loop', async () => {
      await element(by.id('stall_event_loop')).tap();
    });
  });
});
